test/conformance/chainsaw/generate/clusterpolicy/standard/existing/existing-with-wildcard-name-matching/existing-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tst-home-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: tst-mobile-dev
