test/conformance/chainsaw/generate/clusterpolicy/standard/existing/existing-with-wildcard-name-matching/generated-resources.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: home
  namespace: tst-home-dev
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: mobile
  namespace: tst-mobile-dev
