test/conformance/chainsaw/generate/clusterpolicy/standard/existing/existing-with-wildcard-name-matching/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: create-default-serviceaccount
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
