test/conformance/chainsaw/generate/clusterpolicy/standard/existing/existing-with-wildcard-name-matching/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: existing-with-wildcard-name-matching
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: existing-resources.yaml
  - name: step-02
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - sleep:
        duration: 3s
  - name: step-04
    try:
    - assert:
        file: generated-resources.yaml
